<resources>
    <string name="app_name">Buildeeji</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="tems_condition">I aggery Terms and Conditions</string>
    <string name="already_have_account">Already have an account? login here</string>
    <string name="username_email_mobile">UserName/Email/Mobile</string>
    <string name="forget_password">forget password?</string>
    <string name="sign_in">SignIn</string>
    <string name="sign_up">SignUp</string>
    <string name="hindi_language">हिन्दी</string>
    <string name="english_language">English</string>
    <string name="telugu_language">Telugu</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="submit">Submit</string>
    <string name="help_faq"><![CDATA[Help & FAQ]]></string>
    <string name="about_email">for any support kindly contact us/ Email: <u>info@buildeeji.com</u></string>
    <string name="builder_description">Appium is an open source project for cross platform test automation. It can supports tests in any framework and in any language that can create an HTTP request.  It can be used for both Android and iOS , By using Appium we can test Apps on real devices or emulators. It is open source tool for automating native, mobile web, and hybrid applications on iOS and Android platforms</string>
    <string name="builder_info_correct_yes_or_no">Has Builder provide correct information or not ?</string>


    <!--No ( Has builder provide correct information on the Listing ) -->
    <string name="Report_the_problem_with_Listing">Report the problem with Listing</string>
    <string name="Property_already_sold_sold_or_rented_out">Property already sold or rented out</string>
    <string name="incorrect_price_or_area">Incorrect Price/Area</string>
    <string name="incorrect_location_information">Incorrect Location Information</string>
    <string name="incorrect_contact_information">Incorrect Contact Information</string>
    <string name="for_sale_but_listed_under_rent_vice_versa">For Sale but listed under rent/Vice Versa</string>
    <string name="property_shown_here_does_not_exist">Property shown here does not exist</string>
    <string name="fake_incorrect_images">Face/Incorrect Images</string>
    <string name="others">Others</string>
    <string name="fill_details_to_download">To download brochure please fill in your details</string>
    <string name="agree_terms_conditions"><![CDATA[Agree T&C]]></string>


    <string-array name="contact_us_reason">
        <item>Select one Reason</item>
        <item>Participation in BuildExpo </item>
        <item>Payment verifications</item>
        <item>Account validations</item>
        <item>Support</item>
        <item>Others</item>
    </string-array>
    <string-array name="contact_us_country_code">
        <item>Select Country</item>
        <item>afganistan</item>
        <item>bangaladesh</item>
        <item>coriya</item>
        <item>dubai</item>
        <item>egipt</item>
        <item>France</item>
        <item>Germany</item>
    </string-array>
</resources>
