<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="45dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/sign_up_user_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_edit_text_height"
                android:background="@drawable/shape_round_rect_white"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textCursorDrawable="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/commen_text_size_12">

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_edit_text_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_round_rect_white"
                android:hint="@string/email"
                android:inputType="textAutoCorrect"
                android:padding="5dp"
                android:textCursorDrawable="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/sign_up_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_edit_text_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_round_rect_white"
                android:hint="@string/mobile"
                android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_edit_text_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_round_rect_white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/sign_up_conform_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_edit_text_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_round_rect_white"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textCursorDrawable="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/sign_up_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tems_condition"
                android:textColor="@color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textCapSentences"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/already_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/already_have_account"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>
